test/Common/LinkerScriptParsing/Errors/Assignments/MissingWhitespace/Inputs/script3.t
SECTIONS
{
  . =0x800;
}
